[gd_scene load_steps=3 format=3 uid="uid://djnu5wj0f6vvm"]

[ext_resource type="PackedScene" uid="uid://cgpkgit6a6r4d" path="res://logic block/logic_block_sprite.tscn" id="1_dq54d"]
[ext_resource type="Script" path="res://logic block/scripts/timer_block.gd" id="1_dxuto"]

[node name="TimerBlock" type="Node2D"]
script = ExtResource("1_dxuto")

[node name="LogicBlockSprite" parent="." instance=ExtResource("1_dq54d")]
position = Vector2(2.08165e-12, 2.08165e-12)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="FlashRect" type="Polygon2D" parent="."]
visible = false
position = Vector2(-60, -60)
scale = Vector2(120, 120)
color = Color(1, 1, 1, 0.552941)
polygon = PackedVector2Array(0, 0, -0.166667, 0, -0.166667, 1, 2.08165e-12, 1, 0, 1.16667, 1, 1.16667, 1, 1, 1.16667, 1, 1.16667, 0, 1, 2.08165e-12, 1, -0.166667, 0, -0.166667)

[node name="NumInput" type="HSlider" parent="."]
offset_left = -57.0
offset_top = 56.0
offset_right = 56.0
offset_bottom = 82.0
step = 0.1
value = 0.5
exp_edit = true

[node name="FrequencyLabel" type="Label" parent="."]
offset_left = -31.0
offset_top = 34.0
offset_right = 33.0
offset_bottom = 57.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="clicked" from="LogicBlockSprite" to="." method="_on_logic_block_clicked"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="value_changed" from="NumInput" to="." method="_on_num_input_value_changed"]
